# hackers6thsense

./: README.md  build.conf.sample
Oblivion-main/: Dockerfile  MANIFEST.in  docker-compose.yml  mkdocs.yml  policy.yaml  pyproject.toml  readme.md  requirements.txt  setup_kali.sh
Oblivion-main/docs/: api.md  architecture.md  dashboard.md  index.md  installation.md  instructor_guide.md  quick-start.md  safety.md  scenarios.md
Oblivion-main/docs/assets/: README.md
Oblivion-main/docs/scenarios/examples/: exploit_chain.yaml  web_scan.yaml
Oblivion-main/ob1/: __main__.py  api_server.py  asset_store.py  attack_modules.py  config_wizard.py  dashboard.py  enhanced_oblivion.py  metasploit_client.py  policy_manager.py  scenario_runner.py  signal_utils.py
hackers6thsense/: .env.example  API.md  API_QUICK_REFERENCE.md  COMPLETE_DASHBOARD_FEATURES.md  COMPLETE_FEATURE_CHECKLIST.md  COMPLETE_SETUP_GUIDE.md  DASHBOARD_COMPLETION_REPORT.md  DASHBOARD_COMPONENTS_CHECKLIST.md  DASHBOARD_DOCUMENTATION_INDEX.md  DASHBOARD_LAUNCH_SUMMARY.md  DELIVERY_REPORT.md  DELIVERY_SUMMARY.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.php  DEPLOYMENT_VERIFICATION.md  DOCUMENTATION_INDEX.md  ENHANCED_CHAT_API.md  FAQ.md  FILE_LISTING.md  FILE_MANIFEST.md  FINAL_DELIVERY_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  INSTALLER_SETUP_COMPLETE.md  INTEGRATION_UPDATES.md  LEGION_COMPLETE.md  LEGION_DEPLOYMENT_CHECKLIST.md  LEGION_DEPLOYMENT_INDEX.md  LEGION_DEPLOYMENT_STATUS.php  LEGION_INTEGRATION.md  LEGION_INTEGRATION_MANIFEST.md  LEGION_INTEGRATION_README.md  OBLIVION_COMPLETION.md  (+28 more)
(+87 files in other folders)
